# g2ngine

./: Cargo.toml  FLEXIBLE_MATERIALS_ROADMAP.md  README.md  graph.dot  index.html  world.json
.github/workflows/: deploy.yml
docs/: control_flow.md
examples/: desktop.rs
pkg/: game.d.ts  game.js  game_bg.wasm.d.ts  index.html  package.json
res/: demo.js  gl-matrix.min.js  light.wgsl  shader.wgsl
src/: app_ui.rs  camera.rs  defaults.rs  egui.rs  engine_desktop.rs  engine_web.rs  gui.rs  lib.rs  light.rs  model.rs  particle_system.rs  resources.rs  scripting.rs  shader.wgsl  state.rs  texture.rs  ui.rs  world.rs
