[package]
name = "game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "desktop"
path = "examples/desktop.rs"

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
web-time = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0.2"
pollster = "0.3"
cgmath = { version = "0.18", features = ["serde"] }
tobj = { version = "3.2", default-features = false, features = ["async"] }
egui = "0.32.2"
egui-wgpu = "0.32.2"
egui-winit = { version = "0.32.2", default-features = false }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

# Web specific
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version="0.11" }
futures = "0.3.31"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0.2", features = ["webgl"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "HtmlScriptElement",
    "HtmlHeadElement",
    "Performance"
]}
js-sys = "0.3"

# Desktop specific
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
boa_engine = { version = "0.20" }
boa_gc = "0.18"
